# self-control

./: .gitignore  Makefile  README.md  releaseNote.md
.agent/workflows/: review.md
_bmad-output/: project-context.md
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/_config/ides/: antigravity.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/wds/: config.yaml
agent/: .env.example  Cargo.toml  Info.plist  SCKAudioCapture  a.out  build.rs  com.selfcontrol.agent.plist  entrypoint.sh  print_format.m  test  test.m
agent/src/: SCKAudioCapture.m  app_state.rs  cli.rs  config.rs  controller.rs  core_service.rs  error.rs  macos_audio.rs  macos_session.rs  main.rs  models.rs  windows_service.rs
agent/src/capture/: audio.rs  video.rs
agent/src/gui/: dashboard.rs
agent/src/network/: mod.rs  webrtc.rs  ws.rs
agent/src/sys/: SCKAudioCapture.swift  macos_audio.rs  macos_power.rs  macos_session.rs  mod.rs  ui.rs  windows_service.rs
deploy/: Jenkinsfile.groovy  Makefile  docker-compose.local.yml  docker-compose.prod.yml
deploy/dockerfile/: agent.Dockerfile  proxy.Dockerfile
proxy/: .env.example  Cargo.toml
proxy/src/: cli.rs  main.rs
proxy/src/handlers/: health.rs  ws.rs
proxy/src/models/: session.rs
releases/: agent-macos
releases/RustRemote.app/Contents/MacOS/: agent
scripts/: build-releases.sh  package-macos.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: rdp_client_bg.wasm
web/src/: App.tsx  index.css
web/src/components/: RdpViewer.tsx
web/src/components/forms/: ConnectionForm.tsx
web/src/components/layout/: Header.tsx
web/src/components/remote/: RdpViewer.tsx  RemotePlaceholder.tsx  SessionStatus.tsx  VirtualKeyboard.tsx
web/src/styles/: index.css
