[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
scrap = { path = "vendor/scrap" }
image = { version = "0.24", default-features = false, features = ["jpeg"] }
enigo = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
machine-uid = "0.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"
local-ip-address = "0.6"
core-graphics = { version = "0.23", optional = true }
core-foundation = { version = "0.9", optional = true }
windows-service = { version = "0.7", optional = true }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_StationsAndDesktops",
], optional = true }

[features]
default = []
macos_service = ["core-graphics", "core-foundation"]
windows_service = ["windows-service", "windows"]
