[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(quartz)', 'cfg(x11)', 'cfg(dxgi)'] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
scrap = { path = "vendor/scrap" }
image = { version = "0.24", default-features = false, features = ["jpeg"] }
arboard = "3.3"
cpal = "0.15"
crc32fast = "1.3"
enigo = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
machine-uid = "0.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"
eframe = "0.26"
confy = "0.6"
local-ip-address = "0.6"
core-graphics = { version = "0.23", optional = true }
core-foundation = { version = "0.9", optional = true }
[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_StationsAndDesktops",
    "Win32_Graphics_Gdi",
] }

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[target.'cfg(target_os = "macos")'.build-dependencies]
objc = "0.2.7"
block = "0.1.6"

[features]
default = []
macos_service = ["core-graphics", "core-foundation"]
